# CodeNova

backend/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
backend/app/: main.py  tasks.py
backend/app/agents/: chat_agent.py  doc_agent.py  pr_agent.py  repo_analyzer.py  slash_commands.py
backend/app/api/: deps.py
backend/app/api/routes/: auth.py  chat.py  docs.py  health.py  pull_request.py  repositories.py
backend/app/core/: config.py  database.py  llm_models.py  redis.py  security.py
backend/app/models/: models.py
backend/app/schemas/: schemas.py
backend/app/services/: ast_extractor.py  chunker.py  embeddings.py  evaluation_metrics.py  github_service.py  graph_store.py  vector_store.py
frontend/: package-lock.json  package.json
frontend/src/: proxy.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/dashboard/: DashboardMetrics.tsx  RepositoriesList.tsx  RepositoryCard.tsx  actions.ts  page.tsx
frontend/src/app/ingestion/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/components/: AppShell.tsx
frontend/src/components/chat/: ChatHistoryPanel.tsx  ChatPanel.tsx
frontend/src/components/docs/: DocHistory.tsx  DocumentationViewer.tsx  PillarCard.tsx  RespositorySummary.tsx
frontend/src/lib/: api.ts  auth.tsx  docs-api.ts  pull-request-api.ts  query-keys.ts  repository-api.ts
frontend/src/providers/: react-query-provider.tsx
frontend/src/types/: chat.ts  doc.ts  pull-request.ts  repo.ts
frontend/src/utils/: docs.ts  pull-request.ts  repo.ts
(+18 files in other folders)
