[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "bcrypt==4.1.3",
    "celery>=5.6.3",
    "email-validator>=2.3.0",
    "fastapi>=0.136.3",
    "gitpython>=3.1.50",
    "langchain-community>=0.4.2",
    "loguru>=0.7.3",
    "neo4j>=6.2.0",
    "openai>=2.41.1",
    "passlib>=1.7.4",
    "pydantic-settings>=2.14.1",
    "pygithub>=2.9.1",
    "python-dotenv>=1.2.2",
    "python-jose>=3.5.0",
    "qdrant-client>=1.18.0",
    "redis>=8.0.0",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.50",
    "tree-sitter>=0.25.2",
    "tree-sitter-go>=0.25.0",
    "tree-sitter-java>=0.23.5",
    "tree-sitter-javascript>=0.25.0",
    "tree-sitter-python>=0.25.0",
    "tree-sitter-typescript>=0.23.2",
    "uvicorn>=0.49.0",
]
